--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,29 +1,67 @@
 pipeline {
-  agent any
-
-  stages {
-    stage('Install Dependencies') {
-      steps {
-        sh 'npm install'
-      }
+    agent any
+    tools {
+        nodejs 'nodejs'   // Ensure this name matches your Global Tool Configuration
+    }
+    environment {
+        DEPLOY_HOOK_URL = 'https://api.render.com/deploy/srv-cronan56l47c73fqc4gg?key=ZXodTKEAAbo' 
+      
     }
 
-    stage('Deploy to Render') {
-      steps {
-        script {
-          // Trigger a deployment using the Render deploy hook URL
-          sh "node server"
+    stages {
+        stage('Node Version') {
+            steps {
+                echo 'Checking Node.js version...'
+                sh 'node --version'
+            }
         }
-      }
+        stage('Clone repo') {
+            steps {
+                echo 'Cloning the repository...'
+                git credentialsId: 'gitcredentials', url: 'https://github.com/emmanuelterah/gallery'
+            }
+        }
+        stage('Install Npm') {
+            steps {
+                echo 'Installing npm packages...'
+                sh 'npm install'
+                sh 'npm install mongodb'
+                sh 'npm install -g webpack'
+            }
+        }
+        stage('Build') {
+            steps {
+                echo 'Running the build...'
+                sh 'npm run build'
+            }
+        }
+        stage('Test') {
+            steps {
+                echo 'Running tests...'
+                sh 'npm test'
+            }
+        }
+        stage('Deploy to Render122') {
+            steps {
+                script {
+                    def response = sh(script: """
+                        curl -X POST ${DEPLOY_HOOK_URL}
+                    """, returnStdout: true).trim()
+                    
+                    echo "Deployment Response: ${response}"
+                }
+            }
+        }
     }
-  }
 
-  post {
-    success {
-      echo 'Build and deployment successful!'
+    post {
+        always {
+            echo 'Pipeline completed.'
+        }
+        failure {
+            echo 'Pipeline failed.'
+        }
     }
-    failure {
-      echo 'Build failed!'
-    }
-  }
 }
+
+// https://api.render.com/deploy/srv-cronan56l47c73fqc4gg?key=ZXodTKEAAbo
