--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "chai": "^3.2.0",
     "chai-http": "^1.0.0",
-    "mocha": "^8.1.1"
+    "mocha": "^8.1.1",
+    "webpack-cli": "^5.1.4"
   }
 }
