--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "mongodb": "^3.7.4",
     "mongoose": "^5.13.22",
     "multer": "^1.4.2",
-    "uuid": "^8.1.0"
+    "uuid": "^8.1.0",
+    "webpack-node-externals": "^3.0.0"
   },
   "devDependencies": {
     "chai": "^3.2.0",
