--- a/JenkinsFile
+++ b/JenkinsFile
@@ -134,8 +134,8 @@ pipeline {
             script {
                 echo 'Pipeline successful. Sending Slack notification...'
                 sh """
-                curl -X POST -H 'Content-type: application/json' \
-                -H 'Authorization: Bearer xoxb-7769210273923-7784391947601-MbuFtkmH71jAnl7PYpJ3IkXS' \
+                curl -X POST -H 'Content-type: application/json; charset=utf-8' \
+                -H 'Authorization: Bearer xoxb-7769210273923-7784391947601-ShOEwXJHa1yTnWHD0AbS5EZF' \
                 --data '{
                     "channel": "#emmanuel_ip1",
                     "text": "Successful deploy of ${env.JOB_NAME} #${env.BUILD_NUMBER}. View the site at ${RENDER_URL}. Build details: ${BUILD_URL}"
