--- a/JenkinsFile
+++ b/JenkinsFile
@@ -134,10 +134,10 @@ pipeline {
             script {
                 echo 'Pipeline successful. Sending Slack notification...'
                 sh """
-                curl -X POST -H 'Content-type: application/json; charset=utf-8' \
-                -H 'Authorization: Bearer xoxb-7769210273923-7784391947601-ShOEwXJHa1yTnWHD0AbS5EZF' \
+                curl -X POST -H 'Content-Type: application/json; charset=utf-8' \
+                -H "Authorization: Bearer ${SLACK_BOT_TOKEN}" \
                 --data '{
-                    "channel": "#emmanuel_ip1",
+                    "channel": "${SLACK_CHANNEL}",
                     "text": "Successful deploy of ${env.JOB_NAME} #${env.BUILD_NUMBER}. View the site at ${RENDER_URL}. Build details: ${BUILD_URL}"
                 }' https://slack.com/api/chat.postMessage
                 """
