--- a/JenkinsFile
+++ b/JenkinsFile
@@ -77,7 +77,7 @@ pipeline {
     }
     environment {
         DEPLOY_HOOK_URL = 'https://api.render.com/deploy/srv-cronan56l47c73fqc4gg?key=ZXodTKEAAbo' 
-        SLACK_WEBHOOK_URL = 'https://hooks.slack.com/services/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'
+        SLACK_WEBHOOK_URL = 'https://hooks.slack.com/services/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'
         RENDER_URL = "https://gallery-wg33.onrender.com" 
         SLACK_CHANNEL="#emmanuel_ip1"
     }
@@ -134,9 +134,8 @@ pipeline {
                 echo 'Pipeline successful. Sending Slack notification...'
                 sh """
                 curl -X POST -H 'Content-Type: application/json' \
-                --data '{
-                    "text": "Successful deploy of ${env.JOB_NAME} #${env.BUILD_NUMBER}. View the site at ${RENDER_URL}. Build details: ${env.BUILD_URL}"
-                }' ${SLACK_WEBHOOK_URL}
+                --data '{"text": "Successful deploy of ${env.JOB_NAME} #${env.BUILD_NUMBER}. View the site at ${RENDER_URL}. Build details: ${env.BUILD_URL}"}' \
+                ${SLACK_WEBHOOK_URL}
                 """
             }
         }
@@ -145,11 +144,11 @@ pipeline {
                 echo 'Pipeline failed. Sending Slack notification...'
                 sh """
                 curl -X POST -H 'Content-Type: application/json' \
-                --data '{
-                    "text": "Failed deploy of ${env.JOB_NAME} #${env.BUILD_NUMBER}. Check the build details: ${env.BUILD_URL}"
-                }' ${SLACK_WEBHOOK_URL}
+                --data '{"text": "Failed deploy of ${env.JOB_NAME} #${env.BUILD_NUMBER}. Check the build details: ${env.BUILD_URL}"}' \
+                ${SLACK_WEBHOOK_URL}
                 """
             }
         }
     }
+
 }
