--- a/JenkinsFile
+++ b/JenkinsFile
@@ -77,7 +77,7 @@ pipeline {
     }
     environment {
         DEPLOY_HOOK_URL = 'https://api.render.com/deploy/srv-cronan56l47c73fqc4gg?key=ZXodTKEAAbo' 
-        SLACK_WEBHOOK_URL = 'https://hooks.slack.com/services/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'
+        // SLACK_WEBHOOK_URL = 'https://hooks.slack.com/services/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'
         RENDER_URL = "https://gallery-wg33.onrender.com" 
         SLACK_CHANNEL="#emmanuel_ip1"
     }
@@ -154,7 +154,7 @@ pipeline {
         success {
             script {
                 sh '''
-                    curl -X POST -H 'Content-type: application/json' --data '{"text":"Hello, World!"}' https://hooks.slack.com/services/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
+                    curl -X POST -H 'Content-type: application/json' --data '{"text":"Hello, World!"}' https://hooks.slack.com/services/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
                 '''
             }
         }
