--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,13 +1,96 @@
+// pipeline {
+//     agent any
+//     tools {
+//         nodejs 'nodejs'  // Ensure this name matches your Global Tool Configuration
+//     }
+//     environment {
+//         DEPLOY_HOOK_URL = 'https://api.render.com/deploy/srv-cronan56l47c73fqc4gg?key=ZXodTKEAAbo' 
+//         SLACK_WEBHOOK_URL = 'https://hooks.slack.com/services/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'
+//         RENDER_URL = "https://gallery-wg33.onrender.com" 
+//         SLACK_CHANNEL="#emmanuel_ip1"
+//     }
+
+//     stages {
+//         stage('Node Version') {
+//             steps {
+//                 echo 'Checking Node.js version...'
+//                 sh 'node --version'
+//             }
+//         }
+//         stage('Clone repo') {
+//             steps {
+//                 echo 'Cloning the repository...'
+//                 git credentialsId: 'gitcredentials', url: 'https://github.com/emmanuelterah/gallery'
+//             }
+//         }
+//         stage('Install Npm') {
+//             steps {
+//                 echo 'Installing npm packages...'
+//                 sh 'npm install'
+//                 sh 'npm install mongodb'
+//                 sh 'npm install -g webpack'
+//             }
+//         }
+//         stage('Build') {
+//             steps {
+//                 echo 'Running the build...'
+//                 sh 'npm run build'
+//             }
+//         }
+//         stage('Test') {
+//             steps {
+//                 echo 'Running tests...'
+//                 sh 'npm test'
+//             }
+//         }
+//         stage('Deploy to Render') {
+//             steps {
+//                 script {
+//                     def response = sh(script: """
+//                         curl -X POST ${DEPLOY_HOOK_URL}
+//                     """, returnStdout: true).trim()
+                    
+//                     echo "Deployment Response: ${response}"
+//                 }
+//             }
+//         }
+//     }
+
+//     post {
+//         success {
+//             script {
+//                 echo 'Pipeline successful. Sending Slack notification...'
+//                 sh """
+//                 curl -X POST -H 'Content-Type: application/json' \
+//                 --data '{"text": "Successful deploy of ${env.JOB_NAME} #${env.BUILD_NUMBER}. View the site at ${RENDER_URL}. Build details: ${env.BUILD_URL}"}' \
+//                 ${SLACK_WEBHOOK_URL}
+//                 """
+//             }
+//         }
+//         failure {
+//             script {
+//                 echo 'Pipeline failed. Sending Slack notification...'
+//                 sh """
+//                 curl -X POST -H 'Content-Type: application/json' \
+//                 --data '{"text": "Failed deploy of ${env.JOB_NAME} #${env.BUILD_NUMBER}. Check the build details: ${env.BUILD_URL}"}' \
+//                 ${SLACK_WEBHOOK_URL}
+//                 """
+//             }
+//         }
+//     }
+
+// }
+
+
 pipeline {
     agent any
     tools {
         nodejs 'nodejs'  // Ensure this name matches your Global Tool Configuration
     }
     environment {
-        DEPLOY_HOOK_URL = 'https://api.render.com/deploy/srv-cronan56l47c73fqc4gg?key=ZXodTKEAAbo' 
-        SLACK_WEBHOOK_URL = 'https://hooks.slack.com/services/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'
-        RENDER_URL = "https://gallery-wg33.onrender.com" 
-        SLACK_CHANNEL="#emmanuel_ip1"
+        DEPLOY_HOOK_URL = 'https://api.render.com/deploy/srv-cronan56l47c73fqc4gg?key=ZXodTKEAAbo'
+        RENDER_URL = 'https://gallery-wg33.onrender.com' // Replace with your actual site URL on Render
+        SLACK_CHANNEL = '#emmanuel_ip1' // Replace with your actual channel name
     }
 
     stages {
@@ -57,26 +140,24 @@ pipeline {
     }
 
     post {
+        always {
+            echo 'Pipeline completed.'
+        }
         success {
             script {
                 echo 'Pipeline successful. Sending Slack notification...'
                 sh """
-                curl -X POST -H 'Content-Type: application/json' \
-                --data '{"text": "Successful deploy of ${env.JOB_NAME} #${env.BUILD_NUMBER}. View the site at ${RENDER_URL}. Build details: ${env.BUILD_URL}"}' \
-                ${SLACK_WEBHOOK_URL}
+                curl -X POST -H 'Content-Type: application/json; charset=utf-8' \
+                -H "Authorization: Bearer ${SLACK_BOT_TOKEN}" \
+                --data '{
+                    "channel": "${SLACK_CHANNEL}",
+                    "text": "Successful deploy of ${env.JOB_NAME} #${env.BUILD_NUMBER}. View the site at ${RENDER_URL}. Build details: ${BUILD_URL}"
+                }' https://slack.com/api/chat.postMessage
                 """
             }
         }
         failure {
-            script {
-                echo 'Pipeline failed. Sending Slack notification...'
-                sh """
-                curl -X POST -H 'Content-Type: application/json' \
-                --data '{"text": "Failed deploy of ${env.JOB_NAME} #${env.BUILD_NUMBER}. Check the build details: ${env.BUILD_URL}"}' \
-                ${SLACK_WEBHOOK_URL}
-                """
-            }
+            echo 'Pipeline failed.'
         }
     }
-
 }
